dist/txt/er.txt
  File "D:\py program\zhongqi\error\1.py", line 8
    is
     ^
SyntaxError: invalid syntax
